--- a/index.html
+++ b/index.html
@@ -20,12 +20,16 @@
         <hr class="counter"/>
         <div class="counter-container">
            <p><span>0</span> items total</p> 
+           <button id="deleteButton">Delete All</button>
         </div>
     </div>
     <button class="btn">Add</button>
   </section> 
   <footer>
-
+    <div class="footer">
+      <p class="made-by">Made By</p>
+      <p class="author">Andy Apaez</p>
+    </div>
   </footer> 
 </body>
 </html>
