--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./styles.css">
     <title>To-Do List</title>
 </head>
 <body>
@@ -12,6 +13,7 @@
     <div class="input">
         <input type="text" class="input-field"
         id="todoInput" placeholder="Add a new todo"/>
+        <button class="btn">Add</button>
     </div>
     <ul class="scroll">
         <li id="todoList"></li>
@@ -23,7 +25,6 @@
            <button id="deleteButton">Delete All</button>
         </div>
     </div>
-    <button class="btn">Add</button>
   </section> 
   <footer>
     <div class="footer">
